[package]
name = "javelin"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
arrow = "46.0.0"
arrow-flight = "46.0.0"
arrow-schema = "47.0.0"
clap = { version = "4.4.6", features = ["derive"] }
datafusion = "31.0.0"
futures = "0.3.28"
parquet = "47.0.0"
tokio = "1.32.0"
tonic = "0.9.2"

[profile.release]
strip = true
