[package]
name = "javelin"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
arrow-flight = "50.0.0"
clap = { version = "4.4.6", features = ["derive"] }
datafusion = "35.0.0"
futures = "0.3.28"
tokio = { version = "1.33.0", features = ["signal"] }
tonic = "0.10.0"

[profile.release]
strip = true
